selfhost/test/typechecker/return/error_unreachable_stmt_if_inside.out
Error at %FILE_NAME%:4:5
Unreachable code
  |      val x = 123
         ^
Control flow exits before this code is reached
